@@ -7,6 +7,7 @@ Version 2.6.0
   - parse P-cal base frequency; allows a shifted P-cal
   - finer P-cal spacing; 'float' replaces 'int' in vex2difx and .input
   - Note: P-cal base frequency is not yet supported in .input file
+* ANTENNA parameter polConvert can be set to true to indicate desire to perform polarization basis conversion on this antenna.  This will eliminate a warning that is not needed in this case.
 
 Version 2.5.0
 ~~~~~~~~~~~~~
